Unreleased Changes
		Fixed gh #1 by skipping over known bugs in 5.18.0-.1

0.002	2014-06-29
		re_matches now works with no /g flag

0.001	2014-06-28
		First Release!